<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdjustComparisonSettingsActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="755dp"
        android:layout_marginTop="24dp"
        android:background="#EFEFEF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTemplate"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#70A7DC"
            android:textColor="#FBFBFB"
            android:text="Adjust Comparison Settings"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="Assign Integer weights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearlySalaryWeightLabel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yearly Salary" />

            <EditText
                android:id="@+id/yearlySalaryWeightID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearlyBonusWeightLabel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yearly Bonus" />

            <EditText
                android:id="@+id/yearlyBonusWeightID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leaveTimeWeightLabel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Leave Time" />

            <EditText
                android:id="@+id/leaveTimeWeightID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sharedOfferedWeightLabel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No. of Shares Offered" />

            <EditText
                android:id="@+id/sharesOfferedWeightID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/houseBuyingProgramWeightLabel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="House Buying Program Fund" />

            <EditText
                android:id="@+id/houseBuyingProgramWeightID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wellnessFundWeightLabel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Wellness Fund" />

            <EditText
                android:id="@+id/wellnessFundWeightID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/saveComparisonSettingButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveComparisonSetting"
                android:text="Save Comparison Settings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/cancelComparisonSettingsChangesButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cancel"
                android:text="Cancel All Changes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/returnToMainMenuButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="returnToMainMenu"
                android:text="Return To Main Menu" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>